linke error 404 en footer link

--- a/pages/notFound.html
+++ b/pages/notFound.html
@@ -109,7 +109,7 @@
                 <div class="footerLinks">
                     <ul>
                         <li><a href="./pages/preguntasFrecuentes.html">Preguntas frecuentes</a></li>
-                        <li><a href="./pages/notFound.html">Política de calidad</a></li>
+                        <li><a href="./notFound.html">Política de calidad</a></li>
                         <li><a href="#">Blog</a></li>
                     </ul>
                 </div>
