acomode medias querys

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     <!-- BENEFICIOS -->
     <section class="seccionBeneficios" id="seccionBeneficios">
-        <div class="contenedorGeneral beneficios " data-aos="fade-up-right" data-aos-duration="700">
+        <div class="contenedorGeneral beneficios " data-aos="fade-up-right" >
             <div class="seccionTextos">
                 <h2 class="margenChico tituloSecundario">
                     Por qué elegir Fancy?
