--- a/pages/contactoFancy.html
+++ b/pages/contactoFancy.html
@@ -75,7 +75,7 @@
             <div class="row mb-5">
                 <div class="col-md-8 mx-auto text-center">
                     <h6 class=" textoDecorativo">CONTACTO</h6>
-                    <h1 class="animate__animated animate__jello">Escribinos</h1>
+                    <h1 >Escribinos</h1>
                     <p>Queremos saber de vos, completa los datos y envianos tu mensaje, te responderemos a la brevedad.
                     </p>
                 </div>
